--- a/.nyx/editor_state.ini
+++ b/.nyx/editor_state.ini
@@ -1,16 +1,16 @@
-cam.pos.x=8.37952
-cam.pos.y=4.35095
-cam.pos.z=5.03993
-cam.yaw=-155.769
-cam.pitch=-15.143
+cam.pos.x=1.74782
+cam.pos.y=0.626258
+cam.pos.z=0.700496
+cam.yaw=-147.917
+cam.pitch=-10.9425
 cam.fov=60
 cam.near=0.01
 cam.far=2000
 cam.speed=6
 cam.boost=2
 cam.sens=0.12
-gizmo.op=1
-gizmo.mode=1
+gizmo.op=2
+gizmo.mode=0
 gizmo.useSnap=0
 gizmo.snapTranslate=1
 gizmo.snapRotateDeg=90
@@ -19,8 +19,12 @@ panel.viewport=1
 panel.hierarchy=1
 panel.inspector=1
 panel.sky=1
-panel.assetBrowser=0
+panel.assetBrowser=1
 panel.stats=1
 panel.renderSettings=0
 panel.projectSettings=1
+panel.lutManager=0
+assetBrowser.folder=
+assetBrowser.filter=
 dock.layoutVersion=1
+postgraph.count=0
