--- a/imgui.ini
+++ b/imgui.ini
@@ -1,32 +1,32 @@
 [Window][Viewport]
-Pos=255,27
-Size=1275,974
+Pos=421,27
+Size=1096,551
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Hierarchy]
 Pos=8,27
-Size=245,974
+Size=411,551
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000B,0
 
 [Window][Inspector]
-Pos=1532,27
-Size=368,711
+Pos=1519,27
+Size=381,486
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Asset Browser]
-Pos=383,747
-Size=1132,279
+Pos=8,580
+Size=411,421
 Collapsed=0
-DockId=0x00000009
+DockId=0x0000000C,0
 
 [Window][Stats]
 Pos=8,27
-Size=245,974
+Size=411,551
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x0000000B,1
 
 [Window][NyxDockspace]
 Pos=0,0
@@ -42,7 +42,7 @@ Collapsed=0
 Pos=1517,528
 Size=387,498
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000006
 
 [Window][Gizmo Toolbar]
 Collapsed=0
@@ -53,32 +53,51 @@ Size=256,77
 Collapsed=0
 
 [Window][Save Scene As]
-Pos=692,496
+Pos=688,506
 Size=256,77
 Collapsed=0
 
 [Window][Project Settings]
-Pos=1532,740
-Size=368,261
+Pos=1519,515
+Size=381,486
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Sky]
-Pos=1532,740
-Size=368,261
+Pos=1519,515
+Size=381,486
 Collapsed=0
 DockId=0x00000006,1
 
+[Window][Post Graph]
+Pos=421,580
+Size=1096,421
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][AddFilterNode]
+Pos=226,25
+Size=420,480
+Collapsed=0
+
+[Window][LUT Manager]
+Pos=8,580
+Size=411,421
+Collapsed=0
+DockId=0x0000000C,1
+
 [Docking][Data]
 DockSpace         ID=0x0DE7201F Window=0xBDD95240 Pos=8,27 Size=1892,974 Split=X
-  DockNode        ID=0x00000001 Parent=0x0DE7201F SizeRef=245,1030 Selected=0xBABDAE5E
-  DockNode        ID=0x00000002 Parent=0x0DE7201F SizeRef=1645,1030 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1275,1030 Split=Y
-      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1098,750 CentralNode=1 Selected=0xC450F867
-      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=1098,278 Split=X
-        DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=789,278
-        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=307,278
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=368,1030 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=387,711 Selected=0x36DC96AB
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=387,261 Selected=0xB4DB519E
+  DockNode        ID=0x00000001 Parent=0x0DE7201F SizeRef=411,1034 Split=Y Selected=0xBABDAE5E
+    DockNode      ID=0x0000000B Parent=0x00000001 SizeRef=420,551 Selected=0xBABDAE5E
+    DockNode      ID=0x0000000C Parent=0x00000001 SizeRef=420,421 Selected=0x36AF052B
+  DockNode        ID=0x00000002 Parent=0x0DE7201F SizeRef=1479,1034 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1096,1034 Split=Y
+      DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1101,576 CentralNode=1 Selected=0xC450F867
+      DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=1101,421 Split=X
+        DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=791,279 Selected=0xF93F8ABB
+        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=308,279
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=381,1034 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=387,516 Selected=0x36DC96AB
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=387,516 Selected=0xB4DB519E
 
